--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 											<ul class="check-list">
 												<li>Marmara Üniversitesi İstatistik Doktora programında tezini yazıyor</li>
 												<li>Bilişim sektöründe danışmanlık ve proje yöneticiliği yapıyor</li>
-												<li>Evinin bahçesinde zeytin ve meyve ağaçları, sebzeler ve arı kovanı var</li>
+												<li>Evinin bahçesindeki zeytin ve meyve ağaçlarını, sebzeleri, arıları seviyor</li>
 											</ul>
 										</section>
 
