--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 										<p>Sığacık'ta yaşar, Ege'yi sever.<br/>
 										Doğa, müzik ve sporla ilgilidir.<br/>
 										Avrupa, Amerika ve Asya'da bulundu.</p>
+										Bilişim sektöründe yer almaktan memnun.</p>
 										<a href="#content" class="button-big">Biraz daha bilgi</a>
 
 								</div>
