--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 									<!-- Banner Copy -->
 										<p>Sığacık'ta yaşar, Ege'yi sever.<br/>
 										Doğa, müzik ve sporla ilgilidir.<br/>
-										Avrupa, Amerika ve Asya'da bulundu.</p>
+										Avrupa, Amerika ve Asya'da bulundu.<br/>
 										Bilişim sektöründe yer almaktan memnun.</p>
 										<a href="#content" class="button-big">Biraz daha bilgi</a>
 
