--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 										<p>Sığacık'ta yaşar, Ege'yi sever.<br/>
 										Doğa, müzik ve sporla ilgilidir.<br/>
 										Avrupa, Amerika ve Asya'da bulundu.<br/>
-										Bilişim sektöründe yer almaktan memnun.</p>
+										Bilişim sektöründe yer almaktan memnun.<br/>
+										Ailesi ve arkadaşlarıyla vakit geçirmekten hoşlanır.</p>
 										<a href="#content" class="button-big">Biraz daha bilgi</a>
 
 								</div>
