--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 										Doğa, müzik ve sporla ilgilidir.<br/>
 										Avrupa, Amerika ve Asya'da bulundu.<br/>
 										Bilişim sektöründe yer almaktan memnun.<br/>
-										Ailesi ve arkadaşlarıyla vakit geçirmekten hoşlanır.</p>
+										Ailesi ve arkadaşlarıyla hoş vakit geçirir.</p>
 										<a href="#content" class="button-big">Biraz daha bilgi</a>
 
 								</div>
