--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 										<section>
 											<a class="bordered-feature-image"><img src="images/bufoto.jpg" alt="" /></a>
 											<h2>Boğaziçi Üniversitesi</h2>
-											<p>1986-1991 Bilgisayar Mühendisliği<br/>1991-1994 İşletme Yüksek Lisans (Finans MBA)</p>
+											<p>1986-1991 Bilgisayar Mühendisliği,<br/>1991-1994 İşletme Yüksek Lisans (Finans MBA)</p>
 										</section>
 
 								</div>
