--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 												<li>Meteksan Sistem'de Etkinlik Çözümleri Direktörü olarak Universiade 2005 projesini gerçekleştirdi,<br/>
 													Yerel Yönetim Çözümleri Direktörü olarak İZSU Bilişim Dış Kaynak projesini yürüttü,</br>
 													Kurumsal Çözümler ve Yazılım Direktörü olarak pek çok kurumsal kaynak planlama (ERP)<br/>
-													ve özel yazılım projeleri gerçekleştirdi.
+													ve özel yazılım projesi gerçekleştirdi.
 												</li>
 											</ul>
 										</section>
