--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 													<span>Ekim 2014 - Eylül 2015, İstanbul/İzmir</span>
 												</li>
 												<li>
-													<a href="#past" class="button">Daha önce neler var?</a>
+													<a href="#past" class="button">Öncesi ...</a>
 												</li>
 											</ul>
 										</section>
@@ -230,7 +230,7 @@
 
 								<!-- Links -->
 									<section>
-										<h2>Bunlara da bakalım</h2>
+										<h2>Bunlara da bakalım:</h2>
 										<div>
 											<div class="row">
 												<div class="3u 12u(mobile)">
