--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 												<li>Marmara Üniversitesi İstatistik Doktora programında tezini yazıyor</li>
 												<li>Bilişim sektöründe danışmanlık ve proje yöneticiliği yapıyor</li>
 												<li>Evinin bahçesindeki zeytin ve meyve ağaçlarını, sebzeleri, arıları seviyor</li>
-												<li>Doğada dolaşmaktan, farklı coğrafyalarda bulunmaktan hoşlanıyor</li>
+												<li>Doğada bulunmaktan, farklı kültür ve coğrafyalarda dolaşmaktan hoşlanıyor</li>
 											</ul>
 										</section>
 
