--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
 												<li>Bilişim sektöründe danışmanlık ve proje yöneticiliği yapıyor</li>
 												<li>Evinin bahçesindeki zeytin ve meyve ağaçlarını, sebzeleri, arıları seviyor</li>
 												<li>Doğada bulunmaktan, farklı kültür ve coğrafyalarda dolaşmaktan hoşlanıyor</li>
+												<li>Eşi ve oğluyla keyifli vakit geçirmeye özen gösteriyor</li>
 											</ul>
 										</section>
 
