--- a/index.html
+++ b/index.html
@@ -25,6 +25,23 @@
 								<!-- Logo -->
 									<h1><a id="logo">Murat Olgun</a></h1>
 							</div>
+
+								<!-- Nav -->
+									<nav id="nav">
+										<a href="index.html">Homepage</a>
+										<a href="threecolumn.html">Three Column</a>
+										<a href="twocolumn1.html">Two Column #1</a>
+										<a href="twocolumn2.html">Two Column #2</a>
+										<a href="onecolumn.html">One Column</a>
+									</nav>
+
+						<ul class="icons">
+							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="mailto:sakinyasam@teos.com.tr" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+						</ul>
+
 						</div>
 					</header>
 					<div id="banner">
