--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
 									<h1><a id="logo">Murat Olgun</a></h1>
 							</div>
 
-						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="mailto:sakinyasam@teos.com.tr" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-						</ul>
+								<!-- Nav -->
+									<nav id="nav">
+										<a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a>
+										<a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a>
+										<a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a>
+										<a href="mailto:sakinyasam@teos.com.tr" class="icon fa-envelope-o"><span class="label">Email</span></a>
+									</nav>
 
 						</div>
 					</header>
