--- a/index.html
+++ b/index.html
@@ -27,12 +27,11 @@
 							</div>
 
 								<!-- Nav -->
-									<nav id="nav">
+									<div id="nav">
 										<a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a>
 										<a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a>
 										<a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a>
-										<a href="mailto:sakinyasam@teos.com.tr" class="icon fa-envelope-o"><span class="label">Email</span></a>
-									</nav>
+									</div>
 
 						</div>
 					</header>
