--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 							</div>
 
 								<!-- Nav -->
-									<div id="nav">
-										<a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a>
-										<a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a>
-										<a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a>
-									</div>
+									<nav id="nav">
+										<a href="#" class="icon fa-twitter"></a>
+										<a href="#" class="icon fa-instagram"></a>
+										<a href="#" class="icon fa-facebook"></a>
+									</nav>
 
 						</div>
 					</header>
