--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 							</div>
 
 								<!-- Nav -->
-									<nav id="nav">
-										<a href="#" class="icon fa-twitter"></a>
-										<a href="#" class="icon fa-instagram"></a>
-										<a href="#" class="icon fa-facebook"></a>
+									<nav id="nav" class="icons">
+										<a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a>
+										<a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a>
+										<a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a>
 									</nav>
 
 						</div>
