--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 							</div>
 
 								<!-- Nav -->
-									<nav id="nav" class="icons">
-										<a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a>
-										<a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a>
-										<a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a>
-									</nav>
+									<nav id="nav"> <ul class="icons">
+										<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+									</ul></nav>
 
 						</div>
 					</header>
