--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
 								<!-- Nav -->
 									<nav id="nav">
-										<a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a>
-										<a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a>
-										<a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a>
+										<a href="https://twitter.com/murato13" class="icon fa-twitter"><span class="label">Twitter</span></a>
+										<a href="https://instagrm.com/muratol13" class="icon fa-instagram"><span class="label">Instagram</span></a>
+										<a href="https://facebook.com/muratol" class="icon fa-facebook"><span class="label">Facebook</span></a>
 									</nav>
 
 						</div>
