--- a/index.html
+++ b/index.html
@@ -26,13 +26,6 @@
 									<h1><a id="logo">Murat Olgun</a></h1>
 							</div>
 
-								<!-- Nav -->
-									<nav id="nav">
-										<a href="https://twitter.com/murato13" class="icon fa-twitter"><span class="label">Twitter</span></a>
-										<a href="https://instagram.com/muratol13" class="icon fa-instagram"><span class="label">Instagram</span></a>
-										<a href="https://facebook.com/muratol" class="icon fa-facebook"><span class="label">Facebook</span></a>
-									</nav>
-
 						</div>
 					</header>
 					<div id="banner">
@@ -48,7 +41,15 @@
 										Ailesi ve arkadaşlarıyla birlikte olmak ister.</p>
 										<a href="#content" class="button-big">Biraz daha bilgi</a>
 
+								<!-- Nav -->
+									<div id="nav">
+										<a href="https://twitter.com/murato13" class="icon fa-twitter"><span class="label">Twitter</span></a>
+										<a href="https://instagram.com/muratol13" class="icon fa-instagram"><span class="label">Instagram</span></a>
+										<a href="https://facebook.com/muratol" class="icon fa-facebook"><span class="label">Facebook</span></a>
+									</div>
+
 								</div>
+
 								<div class="6u 12u(mobile)">
 
 									<!-- Banner Image -->
