--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 										Bilişim sektöründe yer almaktan memnun.<br/>
 										Ailesi ve arkadaşlarıyla birlikte olmak ister.</p>
 										<a href="#content" class="button-big">Biraz daha bilgi</a>
+										<a href="https://twitter.com/murato13" class="button-small">Twitter</a>
 
 								<!-- Nav -->
 									<div id="nav">
