--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 										Bilişim sektöründe yer almaktan memnun.<br/>
 										Ailesi ve arkadaşlarıyla birlikte olmak ister.</p>
 										<a href="#content" class="button-big">Biraz daha bilgi</a>
-										<a href="https://twitter.com/murato13" class="button">Twitter</a>
+										<a href="https://twitter.com/murato13" class="button-big">Twitter</a>
 
 								<!-- Nav -->
 									<div id="nav">
