--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 								<!-- Nav -->
 									<nav id="nav">
-										<a href="https://twitter.com/murato13" class="icon fa-twitter"><span class="label">Twitter</span></a>
+										<a href="https://twitter.com/murato13" class="icon fa-twitter"><span>Twitter</span></a>
 										<a href="https://instagram.com/muratol13" class="icon fa-instagram"><span class="label">Instagram</span></a>
 										<a href="https://facebook.com/muratol" class="icon fa-facebook"><span class="label">Facebook</span></a>
 									</nav>
