--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 										Bilişim sektöründe yer almaktan memnun.<br/>
 										Ailesi ve arkadaşlarıyla birlikte olmak ister.</p>
 										<a href="#content" class="button-big">Biraz daha bilgi</a>
-										<a href="https://twitter.com/murato13" class="button-big">Twitter</a>
+										<a href="https://twitter.com/murato13" class="link">Twitter</a>
 
 								</div>
 								<div class="6u 12u(mobile)">
