--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
 										Bilişim sektöründe yer almaktan memnun.<br/>
 										Ailesi ve arkadaşlarıyla birlikte olmak ister.</p>
 										<a href="#content" class="button-big">Biraz daha bilgi</a>
-										<a href="https://twitter.com/murato13" class="link">Twitter</a>
 
 								</div>
 								<div class="6u 12u(mobile)">
@@ -135,6 +134,9 @@
 												Ailesinin özverisi ve desteğiyle iyi bir eğitim aldı.<br/>
 												1994'te Aslı ile evlendi, 1998'de Ali Eren doğdu.<br/>
 												Bilişim sektöründe pek çok kurum ve projede çalıştı.
+												<a href="https://twitter.com/murato13" class="icon fa-twitter"><span>Twitter</span></a>
+												<a href="https://instagram.com/muratol13" class="icon fa-instagram"><span class="label">Instagram</span></a>
+												<a href="https://facebook.com/muratol" class="icon fa-facebook"><span class="label">Facebook</span></a>
 											</p>
 										</section>
 
