--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
 												Ailesinin özverisi ve desteğiyle iyi bir eğitim aldı.<br/>
 												1994'te Aslı ile evlendi, 1998'de Ali Eren doğdu.<br/>
 												Bilişim sektöründe pek çok kurum ve projede çalıştı.
-												<a href="https://twitter.com/murato13" class="icon fa-twitter"><span>Twitter</span></a>
-												<a href="https://instagram.com/muratol13" class="icon fa-instagram"><span class="label">Instagram</span></a>
-												<a href="https://facebook.com/muratol" class="icon fa-facebook"><span class="label">Facebook</span></a>
+												<span><a href="https://twitter.com/murato13" class="icon fa-twitter">Twitter</a>
+												<a href="https://instagram.com/muratol13" class="icon fa-instagram">Instagram</a>
+												<a href="https://facebook.com/muratol" class="icon fa-facebook">Facebook</a></span>
 											</p>
 										</section>
 
