--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
 												Selanik / Batı Trakya kökenli göçmen bir aileden gelir.<br/>
 												Ailesinin özverisi ve desteğiyle iyi bir eğitim aldı.<br/>
 												1994'te Aslı ile evlendi, 1998'de Ali Eren doğdu.<br/>
-												Bilişim sektöründe pek çok kurum ve projede çalıştı.
-												<span><a href="https://twitter.com/murato13" class="icon fa-twitter">Twitter</a>
-												<a href="https://instagram.com/muratol13" class="icon fa-instagram">Instagram</a>
+												Bilişim sektöründe pek çok kurum ve projede çalıştı.<br/>
+												<a href="https://twitter.com/murato13" class="icon fa-twitter">Twitter</a><br/>
+												<a href="https://instagram.com/muratol13" class="icon fa-instagram">Instagram</a><br/>
 												<a href="https://facebook.com/muratol" class="icon fa-facebook">Facebook</a></span>
 											</p>
 										</section>
